--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,373 +1,21 @@
-/* ================================ */
-/*            Common CSS            */
-/* ================================ */
+@import "mocha.css";
+
 * {
-  /* `otf-font-awesome` is required to be installed for icons */
-  padding: 0;
-  border-radius: 0;
-  min-height: 0;
-  margin: 0;
-  border: none;
-  text-shadow: none;
-  transition: none;
-  box-shadow: none;
+  /* reference the color by using @color-name */
+  color: @text;
 }
 
-/* the whole window */
 window#waybar {
-  background: rgba(0, 0, 0, 0.6);
-  color: #fff4d2;
-  padding: 0px 5px;
-  margin: 0;
-  border-radius: 0px;
+  /* you can also GTK3 CSS functions! */
+  background-color: shade(@base, 0.9);
+  border: 2px solid alpha(@crust, 0.3);
 }
 
-.modules-left {
-  padding-left: 5px;
-}
-
-.modules-right {
-  padding-right: 5px;
-}
-
-#custom-rofi,
-#workspaces button,
-#workspaces button:hover,
-#workspaces button.visible,
-#workspaces button.visible:hover,
-#workspaces button.active,
-#workspaces button.active:hover,
-#workspaces button.urgent,
-#window,
-#tray,
-#disk,
-#cpu,
-#temperature,
-#temperature.critical,
-#backlight,
-#custom-memory,
-#pulseaudio,
-#pulseaudio.muted,
-#battery,
-#battery.critical,
-#battery.warning,
-#clock {
-  font-family: JetBrainsMono Nerd Font Propo;
-  font-size: 14px;
-  font-weight: 400;
-  color: #202020;
-  background: #202020;
-  border-radius: 2px;
-}
-
-#window,
-#tray,
-#disk,
-#cpu,
-#temperature,
-#temperature.critical,
-#backlight,
-#custom-memory,
-#pulseaudio,
-#pulseaudio.muted,
-#battery,
-#battery.critical,
-#battery.warning,
-#clock {
-  padding-right: 4px;
-  margin: 5px 0px;
-}
-
-/* the apps*/
-
-#custom-rofi {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 21px 0 0 21px;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 5px;
-  padding-left: 9px;
-}
-
-/* ================================ */
-/*       workspaces module          */
-/* ================================ */
-#workspaces {
-  margin: 0px;
-  /* padding: 5px 6px; */
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-radius: 21px;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
-#workspaces button {
-  min-width: 25px;
-  background: transparent;
-  padding: 0 4px;
-  margin: 5px 3px;
-}
-
-#workspaces button:hover {
-  border: 0px solid rgba(30, 30, 30, 0.6);
-  border-radius: 21px;
-  background: transparent;
-}
-
-#workspaces button.visible {
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-radius: 21px;
-  background: transparent;
-}
-
-#workspaces button.visible:hover {
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-radius: 21px;
-  background: transparent;
-}
 
 #workspaces button.active {
-  border: 2px solid #fbf1c7;
-  border-radius: 21px;
-  background: transparent;
+  background-color: @surface1;
 }
 
-#workspaces button.active:hover {
-  border: 2px solid #fbf1c7;
-  border-radius: 21px;
-  background: transparent;
-}
-
-#workspaces button.urgent {
-  border: 0px solid #cc241d;
-  border-radius: 21px;
-  background: transparent;
-}
-
-/* ================================ */
-/*            window                 */
-/* ================================ */
-
-#window {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 21px 21px 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 5px;
-  padding-left: 5px;
-}
-
-/* ================================ */
-/*            tray                 */
-/* ================================ */
-
-#tray {
-  /* padding: 0 6px; */
-  background: rgba(0, 0, 0, 0.6);
-}
-/* ================================ */
-/*            backlight             */
-/* ================================ */
-#custom-backlight {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 0 0 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-/* ================================ */
-/*            memory                */
-/* ================================ */
-#custom-memory {
-  color: #458588;
-  border: 0px solid #458588;
-}
-
-/* ================================ */
-/*         pulseaudio               */
-/* ================================ */
-#pulseaudio {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-radius: 21px 0 0 21px;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-#pulseaudio.muted {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-radius: 21px 0 0 21px;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-/* ================================ */
-/*            battery               */
-/* ================================ */
-#battery {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 0 0 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 5px;
-}
-
-#battery.critical {
-  color: #fbf1c7;
-  font-size: 14px;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0px;
-  background: rgba(0, 0, 0, 0.6);
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 5px;
-}
-
-#battery.warning {
-  color: #fbf1c7;
-  font-size: 14px;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0px;
-  background: rgba(0, 0, 0, 0.6);
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 5px;
-}
-/* ================================ */
-/*            clock                 */
-/* ================================ */
-#clock.time {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-left: 0px;
-  border-radius: 0 21px 21px 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 13px;
-  padding-left: 10px;
-}
-
-#clock.date {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 0 0 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-#mpris {
-  color: #282828;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 21px;
-  background: #fbf1c7;
-  padding: 10px 10px;
-  /* margin: 1px 1px;  */
-}
-
-#custom-notification {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 0 0 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 12px;
-  padding-left: 10px;
-}
-
-#custom-wifi {
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 0 0 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-#language {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 0 0 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-#bluetooth {
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 0 0 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-
-#custom-hyprpicker {
-  color: #fbf1c7;
-  background: transparent;
-  border: 0px solid rgba(0, 0, 0, 0.6);
-  border-right: 0px;
-  border-left: 0px;
-  border-radius: 0 0 0 0;
-  margin-top: 3px;
-  margin-bottom: 3px;
-  padding-right: 14px;
-  padding-left: 10px;
+#wlr-taskbar button.active {
+  background-color: @surface1;
 }
